--- a/index.html
+++ b/index.html
@@ -114,6 +114,38 @@
                                 <h3 class="comand-name">Игорь Демьяненко</h3>
                                 <p class="comand-text">Product Designer</p>
                             </div>
+                            <div class="comand-social">
+                                <ul class="link-comand">
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </article>
                     </li>
                     <li class="comand-image">
@@ -124,6 +156,38 @@
                             <div class="comand-info">
                                 <h3 class="comand-name">Ольга Репина</h3>
                                 <p class="comand-text">Frontend Developer</p>
+                            </div>
+                            <div class="comand-social">
+                                <ul class="link-comand">
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </article>
                     </li>
@@ -136,6 +200,38 @@
                                 <h3 class="comand-name">Николай Тарасов</h3>
                                 <p class="comand-text">Marketing</p>
                             </div>
+                            <div class="comand-social">
+                                <ul class="link-comand">
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </article>
                     </li>
                     <li class="comand-image">
@@ -147,12 +243,93 @@
                                 <h3 class="comand-name">Михаил Ермаков</h3>
                                 <p class="comand-text">UI Designer</p>
                             </div>
+                            <div class="comand-social">
+                                <ul class="link-comand">
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-link">
+                                        <a href="" class="social-item">
+                                            <svg class="social-icon" width="20" height="20">
+                                                <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </article>
                     </li>
                 </ul>
             </div>
         </section>
-
+        <!--Наши клиенти-->
+        <section class="clients">
+            <div class="clients-container">
+                <h2 class="clients-title">Наши Клиенты</h2>
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <a href="" class="clients-item">
+                            <svg class="clients-icon" width="44.27" height="49.23">
+                                <use href="images/icons/sprite-logo.svg#icon-logo-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-item">
+                            <svg class="clients-icon" width="40" height="52">
+                                <use href="images/icons/sprite-logo.svg#icon-logo-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-item">
+                            <svg class="clients-icon" width="41" height="42.6">
+                                <use href="images/icons/sprite-logo.svg#icon-logo-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-item">
+                            <svg class="clients-icon" width="79.66" height="42.02">
+                                <use href="images/icons/sprite-logo.svg#icon-logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-item">
+                            <svg class="clients-icon" width="59" height="47">
+                                <use href="images/icons/sprite-logo.svg#icon-logo-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a href="" class="clients-item">
+                            <svg class="clients-icon" width="88.48" height="45.44">
+                                <use href="images/icons/sprite-logo.svg#icon-logo-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--Подвал-->
     <footer class="footer">
