--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
                 </ul>
             </nav>
             <ul class="site-contakt list">
-                <li>
+                <li class="email">
                     <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <svg class="contakt-mail" width="16" height="12">
+                        <use href="images/icons/sprite-contakt.svg#icon-envelope-hover"></use>
+                    </svg>
                 </li>
-                <li>
+                <li class="phone">
                     <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <svg class="contakt-phone" width="10" height="16">
+                        <use href="images/icons/sprite-contakt.svg#icon-smartphone"></use>
+                    </svg>
                 </li>
             </ul>
         </div>
@@ -333,21 +339,59 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-        <div class="container">
-            <a class="logo-footer" href="./"> <span class="accent"> Web</span>Studio </a>
-            <address class="adress">
-                <ul class="adress-list">
-                    <li class="adress-link">
-                        <a class="adress-text" href="#">г. Киев, пр-т Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a class="adress-text" href="#">info@example.com</a>
-                    </li>
-                    <li>
-                        <a class="adress-text" href="#">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+        <div class="footer-container">
+            <div class="adress-footer">
+                <a class="logo-footer" href="./"> <span class="accent"> Web</span>Studio </a>
+                <address class="adress">
+                    <ul class="adress-list">
+                        <li class="adress-link">
+                            <a class="adress-text" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a class="adress-text" href="#">info@example.com</a>
+                        </li>
+                        <li>
+                            <a class="adress-text" href="#">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="footer-social">
+                <h3 class="text-social">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <div class="list-social">
+                    <ul class="element-social">
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="16.25">
+                                    <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
