--- a/index.html
+++ b/index.html
@@ -123,29 +123,29 @@
                             <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
@@ -166,29 +166,29 @@
                             <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
@@ -209,29 +209,29 @@
                             <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
@@ -252,29 +252,29 @@
                             <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-link">
-                                        <a href="" class="social-item">
-                                            <svg class="social-icon" width="20" height="20">
+                                        <a href="" class="comand-item">
+                                            <svg class="comand-icon" width="20" height="20">
                                                 <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
