--- a/portfolio.html
+++ b/portfolio.html
@@ -172,21 +172,59 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-        <div class="container">
-            <a class="logo-footer" href="./"> <span class="accent"> Web</span>Studio </a>
-            <address class="adress">
-                <ul class="adress-list">
-                    <li class="adress-link">
-                        <a class="adress-text" href="#">г. Киев, пр-т Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a class="adress-text" href="#">info@example.com</a>
-                    </li>
-                    <li>
-                        <a class="adress-text" href="#">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+        <div class="footer-container">
+            <div class="adress-footer">
+                <a class="logo-footer" href="./"> <span class="accent"> Web</span>Studio </a>
+                <address class="adress">
+                    <ul class="adress-list">
+                        <li class="adress-link">
+                            <a class="adress-text" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a class="adress-text" href="#">info@example.com</a>
+                        </li>
+                        <li>
+                            <a class="adress-text" href="#">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="footer-social">
+                <h3 class="text-social">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <div class="list-social">
+                    <ul class="element-social">
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="16.25">
+                                    <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link">
+                            <a href="" class="social-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
