--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
             </nav>
             <ul class="site-contakt list">
                 <li class="email">
-                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    <svg class="contakt-mail" width="16" height="12">
-                        <use href="images/icons/sprite-contakt.svg#icon-envelope-hover"></use>
-                    </svg>
+                    <a href="mailto:info@devstudio.com" class="link-contakt"> <svg class="contakt-mail" width="16"
+                            height="12">
+                            <use href="images/icons/sprite-contakt.svg#icon-envelope-hover"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
                 <li class="phone">
-                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    <svg class="contakt-phone" width="10" height="16">
-                        <use href="images/icons/sprite-contakt.svg#icon-smartphone"></use>
-                    </svg>
+                    <a class="link-contakt" href="tel:+380961111111"><svg class="contakt-mail" width="10" height="16">
+                            <use href="images/icons/sprite-contakt.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -119,8 +118,6 @@
                             <div class="comand-info">
                                 <h3 class="comand-name">Игорь Демьяненко</h3>
                                 <p class="comand-text">Product Designer</p>
-                            </div>
-                            <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
                                         <a href="" class="comand-item">
@@ -162,8 +159,6 @@
                             <div class="comand-info">
                                 <h3 class="comand-name">Ольга Репина</h3>
                                 <p class="comand-text">Frontend Developer</p>
-                            </div>
-                            <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
                                         <a href="" class="comand-item">
@@ -205,8 +200,6 @@
                             <div class="comand-info">
                                 <h3 class="comand-name">Николай Тарасов</h3>
                                 <p class="comand-text">Marketing</p>
-                            </div>
-                            <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
                                         <a href="" class="comand-item">
@@ -248,8 +241,6 @@
                             <div class="comand-info">
                                 <h3 class="comand-name">Михаил Ермаков</h3>
                                 <p class="comand-text">UI Designer</p>
-                            </div>
-                            <div class="comand-social">
                                 <ul class="link-comand">
                                     <li class="social-link">
                                         <a href="" class="comand-item">
@@ -359,38 +350,37 @@
 
             <div class="footer-social">
                 <h3 class="text-social">ПРИСОЕДИНЯЙТЕСЬ</h3>
-                <div class="list-social">
-                    <ul class="element-social">
-                        <li class="social-link">
-                            <a href="" class="social-item">
-                                <svg class="social-icon" width="20" height="20">
-                                    <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="" class="social-item">
-                                <svg class="social-icon" width="20" height="16.25">
-                                    <use href="images/icons/sprite.svg#icon-twitter-1"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="" class="social-item">
-                                <svg class="social-icon" width="20" height="20">
-                                    <use href="images/icons/sprite.svg#icon-facebook-1"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="" class="social-item">
-                                <svg class="social-icon" width="20" height="20">
-                                    <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+
+                <ul class="element-social">
+                    <li class="social-link">
+                        <a href="" class="social-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="images/icons/sprite.svg#icon-instagram-2-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-link">
+                        <a href="" class="social-item">
+                            <svg class="social-icon" width="20" height="16.25">
+                                <use href="images/icons/sprite.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-link">
+                        <a href="" class="social-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="images/icons/sprite.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-link">
+                        <a href="" class="social-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="images/icons/sprite.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
