--- a/portfolio.html
+++ b/portfolio.html
@@ -19,22 +19,29 @@
         <div class="container">
             <nav class="header-nav">
                 <a class="logo" href="./"> <span class="accent"> Web</span>Studio </a>
+
                 <ul class="site-nav list">
-                    <li class="header-link"><a href="./index.html" class="links">Студия</a></li>
-                    <li class="header-link"><a href="./portfolio.html" class="link currents">Портфолио</a></li>
+                    <li class="header-link"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="header-link"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="header-link"><a href="#" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="site-contakt list">
-                <li>
-                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="email">
+                    <a href="mailto:info@devstudio.com" class="link-contakt"> <svg class="contakt-mail" width="16"
+                            height="12">
+                            <use href="images/icons/sprite-contakt.svg#icon-envelope-hover"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
-                <li>
-                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="phone">
+                    <a class="link-contakt" href="tel:+380961111111"><svg class="contakt-mail" width="10" height="16">
+                            <use href="images/icons/sprite-contakt.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
     </header>
+
 
     <main>
         <!-- Фильтр -->
