--- a/portfolio.html
+++ b/portfolio.html
@@ -48,19 +48,19 @@
         <section class="service">
             <ul class="filter list container">
                 <li class="filter-btn">
-                    <button type="button" class="current button-primery">Все</button>
+                    <button type="button-secondary" class="current button-primery">Все</button>
                 </li>
                 <li class="filter-btn">
-                    <button type="button" class="button">Веб сайты</button>
+                    <button type="button-secondary" class="button">Веб сайты</button>
                 </li>
                 <li class="filter-btn">
-                    <button type="button" class="button">Приложения</button>
+                    <button type="button-secondary" class="button">Приложения</button>
                 </li>
                 <li class="filter-btn">
-                    <button type="button" class="button">Дизайн</button>
+                    <button type="button-secondary" class="button">Дизайн</button>
                 </li>
                 <li class="filter-btn">
-                    <button type="button" class="button">Маркетинг</button>
+                    <button type="button-secondary" class="button">Маркетинг</button>
                 </li>
             </ul>
             <!--Набор карочек-->
